--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Full Stack Web Design</title>
+		<title>Full Stack Development</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,6 @@
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -46,19 +45,22 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>After experiencing so many different paths in the world, I began the pursuit to utilze my natural and nurtured talents. 
+									Early in life I was given the opportuiity to fall in love music, musicianship and the orchestral flow of life. 
+									Now, after over 10 years in a cell phone sales carreer working for the largest carriers in the U.S.A, which fostered interpersonal and mentorship skills, I have decided to follow another creative avenue: coding. </p>
+								<p>Thank you for taking some of your time to visit my site. Welcome! There's more <a href= "#about">about</a> me further in so this will be brief. You'll find some of my <a href="#work">awesome work</a> as you explore. Hopefully, this will help you learn what it is I can help you with. <br> ~Jason</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image fit"><img src="images/frontend.JPG" alt="" /></span>
-								<p>Check out some of my front end coding <a href="">here</a></p>
+								<p>What people see on your page/site can often be their first introduction to you. I strive to make responsive pages that make sense to the viewer. Check out some of my front end work <a href="https://github.com/StoikJ/Front-End-Foundations">here</a> to get a deeper look at my own site.</p>
 								<span class="image fit"><img src="images/sql.jpg" alt="" /></span>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>I also have experience with utilizing API's to curate responsive pages that utilize database information. These are databases I helped to setup and know how to maintain. I've worked with SQL, NoSQL and mongoDB.</p>
 								<span class="image fit"><img src="images/nosql.jpg" alt="" /></span>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>You can find more code snippets on my <a href="https://github.com/StoikJ/Front-End-Foundations">github</a>. Here's a list of some of my Repositories<br> <ul id="repos">
+								</ul></p>
 							</article>
 
 						<!-- About -->
@@ -92,8 +94,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.instagram.com/stoikjay/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/StoikJ/Front-End-Foundations" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
